Added API Call for changing user email on TLMS side excl. internal database update

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ wp-content/plugins/hello.php
 /readme.html
 /sitemap.xml
 /sitemap.xml.gz
+/Script for adding TLMS users
 
 config.ini
+sfa-talentLMSIntegration.rar
+sfa-talentLMSIntegration.zip
 
